[gd_scene load_steps=2 format=3 uid="uid://uvjnt0i5bb2s"]

[ext_resource type="Script" uid="uid://dq6wgqxnoe7fs" path="res://UI/Menus/Option Menu/OptionMenu.gd" id="1_ul1ma"]

[node name="OptionMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ul1ma")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
offset_left = 36.0
offset_top = 37.0
offset_right = 76.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Audio"

[node name="CheckBox" type="CheckBox" parent="Label"]
layout_mode = 0
offset_left = 79.0
offset_top = -3.0
offset_right = 103.0
offset_bottom = 21.0
button_pressed = true

[node name="Label2" type="Label" parent="."]
offset_left = 38.0
offset_top = 70.0
offset_right = 98.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Flip Speed"

[node name="HSlider" type="HSlider" parent="Label2"]
layout_mode = 0
offset_left = 77.0
offset_right = 254.0
offset_bottom = 16.0
min_value = 0.1
max_value = 3.0
step = 0.1
value = 0.4

[node name="Button" type="Button" parent="."]
offset_left = 265.0
offset_top = 144.0
offset_right = 297.0
offset_bottom = 165.0
text = "Back"

[connection signal="toggled" from="Label/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="Label2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
